# Wrench

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE
cmake/: wrenchConfig.cmake.in
include/wrench/: wrench.hpp
include/wrench/core/: application.hpp  engine.hpp  vector.hpp
include/wrench/renderer/: mesh.hpp  renderer.hpp  shader.hpp
include/wrench/utils/: mat4.hpp  quaternion.hpp  vec2.hpp  vector.hpp
include/wrench/utils/vector/: mat4.hpp  math.hpp  quaternion.hpp  transform.hpp  vec3.hpp
include/wrench/window/: window.hpp
scripts/: build_debug.sh  build_release.sh  clean.sh  install-test.sh  install.sh  uninstall.sh
src/wrench/core/: engine.cpp
src/wrench/renderer/: mesh.cpp  renderer.cpp  shader.cpp
src/wrench/window/: window.cpp
